cli/tests/snapshots/manpage__generate_basic_manpage.snap
---
source: cli/tests/manpage.rs
expression: stdout
---
.TH BASIC.USAGE.KDL 1
.SH NAME
basic.usage.kdl \- No description available
.SH SYNOPSIS
\fBbasic.usage.kdl\fR [COMMAND]
.SH DESCRIPTION
.SH COMMANDS
.TP
\fBplugins\fR
.TP
\fBplugins install\fR
.TP
\fBplugins install_desc\fR
